# openmusic

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h
